--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -1,5 +1,8 @@
  nav, .contenedor, .piepagina, header, .principal{
-     max-width: 95%;  
+     max-width: 95%;
+     border-radius: 0.5em; 
+     margin: auto;
+     text-align: center; 
      
  }
     header{
@@ -15,10 +18,8 @@
             }   
     
     nav {
-            background-color: rgb(128,128,128);
-            margin: auto;
-                    }
-
+            background-color: rgb(179,179,179);            
+        }
         .contenedor {
             background-color: rgb(179,179,179);
             margin: auto;
@@ -28,22 +29,75 @@
             color: white;
             background-color: rgb(0,88,131);
             text-align: center;
-            margin: auto;
+            margin: auto;             
         }
         .articuloppal{
             font-family: 'Franklin Gothic Medium';
             background-color: rgb(244,151,32);
             display: inline-block;
             text-align: left;
-
         }
         aside{          
             background-color: gainsboro;
             display: inline-block;
             text-align: center;
-            width: 24.7%;             
+            width: 24.7%;  
+            border-radius: 0.3em;           
         }
-        
+    /*Menu*/
+    .menu li {
+       display: inline-block;
+    }
+    li a, btnDesplegable {
+        display: inline-block;
+        color: black;
+        padding: 0.9em 1em;
+        text-align: center;
+        text-decoration: none;
+    }
+    .contenidoDesplegable{
+        display: none;
+        position: absolute;
+        background-color: blanchedalmond;
+        min-width: 8em;
+    }
+    .contenidoDesplegable a{
+        color: black;
+        padding: 0.9em 1em;
+        display:block ;
+        text-align: left;
+    }
+    .contenidoDesplegable a:hover{
+        background-color: grey;
+    }
+    .desplegable:hover .contenidoDesplegable{
+        display: block;
+    }
 
-        }
+
     
+    li a, btnDesplegablevideo {
+        display: inline-block;
+        color: black;
+        padding: 0.9em 1em;
+        text-align: center;
+        text-decoration: none;
+    }
+    .contenidoDesplegablevideo{
+        display: none;
+        position: absolute;
+        background-color: blanchedalmond;
+        min-width: 8em;
+    }
+    .contenidoDesplegablevideo a{
+        color: black;
+        padding: 0.9em 1em;
+        display:block ;
+        text-align: left;
+    }
+    .contenidoDesplegablevideo a:hover{
+        background-color: grey;
+    }
+    .desplegablevideo:hover .contenidoDesplegablevideo{
+        display: block;
+    }
