--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -83,5 +83,9 @@
     .desplegableactividad:hover .contenidoDesplegableactividad{
         display: block;
     }
+    .contador {
+        text-align: right;
+    }
+      
     
 
