--- a/src/partials/_footer.html
+++ b/src/partials/_footer.html
@@ -6,7 +6,7 @@
                 <p>Grupo-78</p>
             </div>
     <div class="footer-img">
-        <img src="./assets/images/logo-white.png" alt="">
+        <img src="../assets/images/logo-white.png" alt="">
     </div>
 </div>
    
