--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,69 +1,125 @@
-body{
+ body {
   padding: 0;
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 16px;}
-a{
-  text-decoration: none;
+  font-size: 16px
 }
-.container{
-  max-width: 1200px;
-  margin: auto;
-}
-.row{
-  display: flex;
-}
-.row.vertical-align{
-  align-items: center;
-}
-/* Header */
 
-header{ 
-  background-color: #7AA8DC;
+a {
+  text-decoration: none
+}
+
+.container {
+  max-width: 1200px;
+  margin: auto
+}
+
+.row {
+  display: flex
+}
+
+.row.vertical-align {
+  align-items: center
+}
+
+header {
+  background-color: #7aa8dc;
   display: inline-block;
   width: 100%;
 }
 
-
-.logo{
+.logo {
   width: 30%;
+  padding: 8px 0%;
 }
-.logo a img{
+
+.logo a img {
   width: 80px;
   height: auto;
   margin-left: 15px;
 }
-.menu{
+
+.menu {
   list-style: none;
-  color: #ffffff;
+  color: #fff;
   width: 70%;
   display: flex;
-  justify-content: end;
+  justify-content: space-around;
+  margin: 0;
 }
-.menu li{
+
+.menu > li {
   position: relative;
-  padding: 0 15px;
-  text-transform: uppercase;
+  padding: 20px 15px;
+  cursor: pointer;
   
 }
-.menu li a{
-  color: #ffffff;
-  text-transform: uppercase;
+.menu li a,
+.sub-menu {
+  color: #fff
 }
-.sub-menu{
-  position: absolute;
-  top: 42px;
-  left:0px;
-  display: none;
-  list-style: none;
-  color: #ffffff;
-  background-color: #7AA8DC;
-  opacity:0.8 ;
-  padding: 15px;
-  }
- .sub-menu li a{
-   margin: 2px 0;
-   display: inline-block;
- } 
 
-.menu li:hover > .sub-menu{display: block;}
+.sub-menu {
+  position: absolute;
+  top: 53px;
+  left: 0;
+  list-style: none;
+  background-color: #7aa8dc;
+  opacity: 0;
+  padding: 15px;
+  transition: .5s;
+  visibility: hidden;
+
+  }
+.sub-menu li{
+  padding:5px;
+}
+.sub-menu li a {
+  margin: 2px 0;
+  display: inline-block;
+  min-width: max-content;
+
+}
+
+.menu li:hover>.sub-menu {
+  display: block;
+  opacity: .8;
+  visibility: visible;
+
+}
+/*--------------------------footer---------------------------------*/
+footer{
+  background: #333;
+  color: #FFF;  
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  
+  }
+.footer-img{
+  width: 50%;
+  position: relative;
+  display: flex;
+  justify-content: center;  
+}
+.footer-img img{
+    width: 35%;
+  }
+
+ .footer-text{
+  text-align:left;
+  display: block;
+  font-size:16px;
+  width: 50%;
+
+}
+.content-footer{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding: 10px 5%;
+}
+.footer-text p{
+  line-height: 1em;
+  margin: 0;
+}
