--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -144,32 +144,30 @@ footer {
   -webkit-text-stroke-width: thin;
 }
 .section-content .description{
-  
+  font-family: 'Franklin Gothic Medium';
   width: 75%;
   padding: 0 5%;
   text-align: justify;
 }
 .section-content aside {
+  background-color: rgb(240,180,41);
   width: 25%;
-  background: mintcream;
   padding: 15px;
 }
 
 .aside-texto {
-  background-color: rgb(240,180,141);
+  background-color: rgb(240,180,41);
   display: flex;
   -webkit-text-stroke-width: thin;
   padding: 6px;
 }
 
 .aside-twiter {
-  background-color: rgb(240,180,141);
+  background-color: rgb(240,180,41);
   display: flex;
   text-align: center;
   padding: 6px;
-  background: mintcream;
-
-}
+  }
 
 h1 {
   text-align: center;
