--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -223,3 +223,13 @@ list-style: none;
 .video-content{
   width: 100%;
 }
+.activity-content{
+  flex-wrap: wrap;
+  padding-bottom: 30px;
+  width: 100%;
+  height: 60%;
+}
+.activity-content .box-video{
+  width: 80%;
+  
+}
